<resources>
    <string name="app_name">News</string>
    <string name="version">v%s (%s)</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_news">NewsActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">v1.0.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="top_stories">Top Stories</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="menu_arts">ARTS</string>
    <string name="menu_automobiles">AUTOMOBILES</string>
    <string name="menu_books">BOOKS</string>
    <string name="menu_business">BUSINESS</string>
    <string name="menu_fashion">FASHION</string>
    <string name="menu_food">FOOD</string>
    <string name="menu_health">HEALTH</string>
    <string name="menu_home">HOME</string>
    <string name="menu_insider">INSIDER</string>
    <string name="menu_magazine">MAGAZINE</string>
    <string name="menu_movies">MOVIES</string>
    <string name="menu_obituaries">OBITUARIES</string>
    <string name="menu_opinion">OPINION</string>
    <string name="menu_politics">POLITICS</string>
    <string name="menu_real_estate">REAL ESTATE</string>
    <string name="menu_science">SCIENCE</string>
    <string name="menu_sports">SPORTS</string>
    <string name="menu_sunday_review">SUNDAY REVIEW</string>
    <string name="menu_technology">TECHNOLOGY</string>
    <string name="menu_theater">THEATER</string>
    <string name="menu_t_magazine">T MAGAZINE</string>
    <string name="menu_travel">TRAVEL</string>
    <string name="menu_upshot">UPSHOT</string>
    <string name="menu_us">US</string>
    <string name="menu_world">WORLD</string>
    <string name="menu_about">ABOUT</string>
    <string name="title_not_available">Title Not Available</string>
    <string name="abstract_not_available">Abstract Not Available at the moment</string>
    <string name="date_unavailable">Date unavailable</string>
    <string name="article_not_available">Article not available</string>
    <string name="published_on">Published on: %s</string>
    <string name="failed_fetch_top_story_message">Not able to retrieved any \"%s\" articles at the moment.\n\nRetry or
        try again later
    </string>
    <string name="retry_button_title">Retry</string>
    <string name="More">More</string>
    <string name="terms_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="refresh">Refresh</string>
    <string name="fetching_top_story">Fetching %s Top Stories…</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur purus turpis, posuere sed mauris ut, semper faucibus nisi. Nam in.</string>
    <string name="next">Next</string>
    <string name="go_to_app">Go to App</string>
    <string name="skip">Skip</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="skip_tutorial_dialog_title">Want to skip the tutorial?</string>
    <string name="skip_tutorial_dialog_desc">You can review the tutorial later by going to the option on the bottom of the <b>Main Menu</b>.</string>
    <string name="review_tutorial">REVIEW TUTORIAL</string>
    <string name="exit">Exit</string>
</resources>