<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <FrameLayout
            android:layout_width="250dp"
            android:layout_height="400dp"
            android:layout_gravity="center"
            android:id="@+id/imageView2">
        <ViewStub
                android:id="@+id/stub_import"
                android:inflatedId="@+id/imageView2"
                android:layout="@layout/page_tutorial_main_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </FrameLayout>
    <TextView android:id="@+id/tutorial_info"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:paddingHorizontal="16dp"
              android:paddingVertical="8dp"
              android:textColor="?attr/textColorPrimary"
              tools:text="@string/lorem_ipsum"/>
    <LinearLayout android:orientation="horizontal"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center">
        <Button android:id="@+id/left_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorSecondaryLight"
                android:textColor="?attr/colorPrimary"
                android:text="@string/skip"
                android:layout_marginEnd="10dp"
        />
        <Button android:id="@+id/right_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:textColor="?attr/colorPrimary"
                android:text="@string/go_to_app"
        />
    </LinearLayout>
</LinearLayout>