<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.TopStoriesFragment">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/top_stories_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"
        app:layoutManager="LinearLayoutManager"
        android:visibility="gone"
        tools:listitem="@layout/item_article"/>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/failed_fetch_top_story"
            android:layout_width="match_parent"
            android:layout_height="match_parent" android:visibility="gone">

        <TextView
                android:id="@+id/failed_fetch_top_story_textview"
                android:text="@string/failed_fetch_top_story_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/retry_fetch_top_stories"
                android:layout_marginTop="256dp" android:textAlignment="center" android:padding="10dp"/>
        <Button
                android:text="@string/retry_button_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/retry_fetch_top_stories"
                android:textAppearance="?attr/textAppearanceBody1"
                android:backgroundTint="?attr/colorSecondary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/failed_fetch_top_story_textview"
                android:layout_marginBottom="256dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_gravity="center" android:id="@+id/fetching_top_story">

        <ProgressBar
                android:id="@+id/fetching_progress_bar"
                android:text="@string/fetching_top_story"
                android:layout_width="217dp"
                android:layout_height="191dp"
                android:padding="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/fetching_text_view" app:layout_constraintVertical_bias="0.51"/>

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content"
                  android:text="@string/fetching_top_story"
                  android:id="@+id/fetching_text_view"
                  android:textAppearance="@style/TextAppearance.AppCompat.Display1"
                  android:textAlignment="center"
                  app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/fetching_progress_bar" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>